--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Live Blog</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="styles.css">
+  <title>Kept</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div class="container-fluid">
+    <div id="app"></div>
+    <footer>
+      <p>
+        Icons by <a href="http://glyphicons.com/">Glyphicons</a>.
+        <a href="https://github.com/spiral-project/kinto-kept">Source code</a>.
+        <a href="https://github.com/spiral-project/kinto-kept/issues">Issues</a>.
+      </p>
+    </footer>
+  </div>
   <script src="bundle.js"></script>
 </body>
 </html>
